  14.1.0   E resample              ~= rate                 2009-07-29
  14.1.0   E polyphase             ~= rate                 2009-07-29
  14.1.0   E rabbit                ~= rate                 2009-07-29
  14.1.0   Behaviour whereby       soxi                    2009-07-29
           sox -V file(s) -n
           doesn't read to EOF.

Other bug fixes:

  o Bump library version because it was not binary compatible with
    SoX 14.0.1 (Pascal Giard)
  o Turn off versioning of special libsox_fmt* libraries since thats
    not really needed.  (kwizart)
  o Fixed crash when running play with no arguments. (Dan Nelson)
  o Allow libpng to be found with -static option. (cbagwell)
  o Allow libsamplerate to be found if pkg-config is installed but
    no samplerate.pc exists. (cbagwell)
  o [2038855] external lpc10 lib patch.  (Oden Eriksson, Mandriva)


sox-14.1.0	2008-7-29
----------

Previously deprecated features that have been removed in this release:

  Deprec-  Feature    [O(ption)]
  ated in  [F(ormat)] [E(ffect)]   Replacement
  -------  ----------------------  ----------------------
  13.0.0   O -e                    -n
  13.0.0   O -b/-w/-l/-d           -1/-2/-4/-8
  13.0.0   E avg, pick             mixer
  13.0.0   E highp, lowp           highpass -1, lowpass -1
  13.0.0   E mask                  dither
  13.0.0   E vibro                 ~= tremolo
  13.0.0   F auto                  Becomes internal only

Previously deprecated features (to be removed in future):

  Deprec-  Feature    [O(ption)]                           Removal
  ated in  [F(ormat)] [E(ffect)]   Replacement             due after
  -------  ----------------------  ----------------------  -------
  14.0.0   E stretch               ~= tempo                2008-09-11
  14.0.0   E pitch                 ~= key                  2008-09-11

Newly deprecated features (to be removed in future):

  Deprec-  Feature    [O(ption)]                           Removal